# texnim

./: Makefile  README.md  setup.cfg
tests/: test_texnim.py
