[metadata]
name = texnim
version = 0.1.0
author = BlockOG
author_email = blockofgamingreal@gmail.com
description = A text based animation engine.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BlockOG/texnim
project_urls =
    Bug Tracker = https://github.com/BlockOG/texnim/issues
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pillow
python_requires = >=3.6

[options.packages.find]
where = .
